# app/Http/Controllers/NewPasswordController.php
@@ -12,6 +12,44 @@ use Illuminate\Validation\ValidationException;
 
 class NewPasswordController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path="/reset-password",
+     *      operationId="userResetPassword",
+     *      tags={"Auth"},
+     *      summary="User reset password",
+     *      description="Reseting password",
+     *     @OA\Parameter(
+     *          name="password",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="password_confirmation",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Bad request",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
     public function store(Request $request)
     {
         $request->validate([
