# app/Http/Controllers/UserController.php
@@ -6,6 +6,29 @@ use Illuminate\Http\Request;
 
 class UserController extends Controller
 {
+
+    /**
+     * @OA\Get(
+     *      path="/user",
+     *      operationId="getUsersList",
+     *      tags={"User"},
+     *      summary="Get list of users",
+     *      description="Returns list of users",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Bad request",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
     public function show(Request $request)
     {
         return $request->user()
